--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <nav class="project-nav">
+    <ul>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_1/">№1</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2/">№2</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">№2.1</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_3/">№3</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_4/">№4</a></li>
+    </ul>
+  </nav>
+    <div class="content">
     <div class="lock-container">
         <h2>Введіть графічний ключ</h2>
         <div class="grid">
@@ -23,7 +33,7 @@
         <button onclick="checkPattern()">Підтвердити</button>
         <p id="message" class="message"></p>
     </div>
-
+</div>
     <script src="script.js"></script>
 </body>
 </html>
